apps/awx/configs/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx-system
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "wss"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    secretName: awx-secret-tls
  rules:
  - host: awx.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: awx-service
              port:
                number: 80
